--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+const name = 'Red';
 ---
 
 <html lang="en">
@@ -7,9 +8,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>Startpage</title>
   </head>
-  <body>
-    <h1 class="text-red-500">Astro</h1>
+  <body
+    class="flex h-screen items-center justify-center bg-zinc-900 text-gray-100"
+  >
+    <h1>Hello, {name}</h1>
   </body>
 </html>
